tests/fixtures/invalid/none_div_bool.py
# Cannot divide None and Bool
x: float = None / True
